pods/ingress/nginx-routing/authentik-forward-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-forward-auth
  namespace: authentik
spec:
  clusterIP: None
  ports:
    - name: https
      port: 9443
      protocol: TCP
      targetPort: 9443
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
