pods/ingress/nginx-routing/registry-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui-public
  namespace: gitea
  annotations:
    external-dns.alpha.kubernetes.io/hostname: registry.mudazukai.cloud
    nginx.ingress.kubernetes.io/auth-url: http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-signin: https://$host/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid
spec:
  ingressClassName: nginx
  rules:
    - host: registry.mudazukai.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  number: 3000
